Notes sampling and quant lecture

--- a/Lectures-Blank/Lesson04bFunctionsPython.ipynb
+++ b/Lectures-Blank/Lesson04bFunctionsPython.ipynb
@@ -230,17 +230,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class InvalidInputError(Exception):\n",
+    "    pass # e class\n",
+    "def func_divide(numerator, denominator):\n",
+    "    try:\n",
+    "        if ((type(numerator) == type(denominator)) \n",
+    "            and (type(numerator) == int or type(numerator == float))):\n",
+    "            return numerator/denominator\n",
+    "        else:\n",
+    "            raise InvalidInputError(\"Arguments must be of type int or float\")\n",
+    "    except InvalidInputError as e:\n",
+    "        print(e)\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"Denominator cannot be 0\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arguments must be of type int or float\n"
+     ]
+    }
+   ],
+   "source": [
+    "func_divide(50, 'hi')"
+   ]
   },
   {
    "cell_type": "code",
@@ -411,10 +435,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 2\n",
+      "b 3\n",
+      "c 4\n",
+      "d 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dictPrint(**kv_args):\n",
+    "    for k, v in kv_args.items():\n",
+    "        print(k, v)\n",
+    "\n",
+    "dictPrint(a=2, b=3,  c=4, d=6)"
+   ]
   },
   {
    "cell_type": "code",
